<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/table_id_text"
            android:layout_weight="1"
            android:textSize="24sp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/table_name_text"
            android:layout_weight="2"
            android:textSize="24sp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/table_age_text"
            android:layout_weight="1"
            android:textSize="24sp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/table_sex_text"
            android:layout_weight="2"
            android:textSize="24sp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/table_phone_text"
            android:layout_weight="4"
            android:textSize="24sp"
            android:textAlignment="center"/>

    </LinearLayout>

    <ListView
        android:id="@+id/dataListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"></ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/insertButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/table_insert_text"/>

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/table_delete_text"/>

        <Button
            android:id="@+id/freshButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/table_fresh_text"/>

    </LinearLayout>

</LinearLayout>
