<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/userId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/table_id_text"
        android:layout_weight="1"
        android:textSize="24sp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/userName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/table_name_text"
        android:layout_weight="2"
        android:textSize="24sp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/userAge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/table_age_text"
        android:layout_weight="1"
        android:textSize="24sp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/userSex"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/table_sex_text"
        android:layout_weight="2"
        android:textSize="24sp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/userPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/table_phone_text"
        android:layout_weight="4"
        android:textSize="24sp"
        android:textAlignment="center"/>

</LinearLayout>
