<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="8dip"
    android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dip"
            android:text="@string/eth_config"
            android:textSize="32dp"/>

        <!-- Connection type -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dip"
            android:text="@string/eth_con_type" />
        <RadioGroup android:id="@+id/con_type"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
            <RadioButton android:id="@+id/dhcp_radio"
                style="?android:attr/textAppearanceSmall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/eth_con_type_dhcp" />
            <RadioButton android:id="@+id/manual_radio"
                style="?android:attr/textAppearanceSmall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/eth_con_type_manual" />
        </RadioGroup>

        <!-- IP address -->
        <LinearLayout android:id="@+id/enterprise_wrapper"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="0dip"
            android:orientation="vertical">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dip"
                android:text="@string/eth_ipaddr" />
            <EditText android:id="@+id/ipaddr_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dip"
                android:singleLine="true" />

            <TextView android:id="@+id/netmask_text"
                  style="?android:attr/textAppearanceSmall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dip"
                android:text="@string/eth_mask" />
            <EditText android:id="@+id/netmask_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dip"
                android:singleLine="true" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dip"
                android:text="@string/eth_dns" />
            <EditText android:id="@+id/eth_dns_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dip"
                android:singleLine="true" />
            <TextView
                style="?android:attr/textAppearanceSmall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dip"
                android:text="@string/eth_gw" />
            <EditText android:id="@+id/eth_gw_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dip"
                android:singleLine="true" />
        </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:rowCount="1"
        android:columnCount="2">

        <Button
            android:id="@+id/ethCancelConfigButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/eth_cancel"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/ethSaveConfigButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/eth_save"
            android:layout_gravity="center"/>
    </GridLayout>
</LinearLayout>