<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.administrator.modulesdriver.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/ledTest_Item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="5px"
                android:paddingTop="5px"
                android:text="@string/list_led_item"
                android:textSize="20pt" />

            <TextView
                android:id="@+id/serialTest_Item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="5px"
                android:paddingTop="5px"
                android:text="@string/list_serial_item"
                android:textSize="20pt" />

            <TextView
                android:id="@+id/IICTest_Item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="5px"
                android:paddingTop="5px"
                android:text="@string/list_iic_item"
                android:textSize="20pt" />

            <TextView
                android:id="@+id/ADTest_Item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="5px"
                android:paddingTop="5px"
                android:text="@string/list_ad_item"
                android:textSize="20pt" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
